--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="splashScreen_color">#FF000000</color>
+    <color name="home_page_title_color">#FFFFFFFF</color>
 </resources>
